--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
          </nav>
 
-         <address class="address-block">
+         <address class="address-block address-none">
             <ul class="address-list list">
                <li class="address-list-item">
                   <a class="address-list-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -46,8 +46,19 @@
                </li>
             </ul>
          </address>
+
+         <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+            <svg class="menu-toggle-icon" width="32" height="22">
+               <use href="./images/icons.svg#icon-menu"></use>
+            </svg>
+         </button>
       </div>
    </header>
+
+
+
+
+
 
    <!-- =============main================= -->
    <main class="main-section">
@@ -115,15 +126,15 @@
 
             <ul class="we-doing-list list">
                <li class="we-doing-list-item">
-                  <img class="we-doing-list-img" src="./images/doing/img-1.jpg" alt="computer monitor" width="360" height="300">
+                  <img class="we-doing-list-img" srcset="./images/doing/image-3desctop@1x.jpg 1x, ./images/doing/image-3desctop@2x.jpg 2x" src="./images/doing/image-3desctop@1x.jpg" alt="computer monitor" width="360" height="300" loading="lazy">
                </li>
 
                <li class="we-doing-list-item">
-                  <img class="we-doing-list-img" src="./images/doing/img-2.jpg" alt="multi screen phone" width="360" height="300">
+                  <img class="we-doing-list-img" srcset="./images/doing/image-2desctop@1x.jpg 1x, ./images/doing/image-2desctop@2x.jpg 2x" src="./images/doing/image-2desctop@1x.jpg" alt="multi screen phone" width="360" height="300" loading="lazy">
                </li>
 
                <li class="we-doing-list-item">
-                  <img class="we-doing-list-img" src="./images/doing/img-3.jpg" alt="laptop on the background and the hand that holds the phone" width="360" height="300">
+                  <img class="we-doing-list-img" srcset="./images/doing/image-1desctop@1x.jpg 1x, ./images/doing/image-1desctop@1x.jpg 2x" src="./images/doing/image-1desctop@1x.jpg" alt="laptop on the background and the hand that holds the phone" width="360" height="300" loading="lazy">
                </li>
             </ul>
          </div>
@@ -133,11 +144,10 @@
 
       <section class="team-section section">
          <div class="container">
-            <h2 class="team-titel sub-titel">Our Team</h2>
 
             <ul class="team-list list">
                <li class="team-list-item">
-                  <img class="team-list-img" src="./images/team/img.jpg" alt="the man smiles" width="264" height="260">
+                  <img class="team-list-img" srcset="./images/team/img@1x-3.jpg 1x, ./images/team/img@2x-3.jpg 2x" src="./images/team/img@1x-3.jpg" alt="the man smiles" width="264" height="260" loading="lazy">
                   <div class="team-list-wraper-text">
                      <h3 class="team-list-titel heading">Mark Guerrero</h3>
                      <p class="team-list-text text">Product Designer</p>
@@ -175,7 +185,7 @@
                </li>
 
                <li class="team-list-item">
-                  <img class="team-list-img" src="./images/team/img-1.jpg" alt="young man smiles and looks away" width="264" height="260">
+                  <img class="team-list-img" srcset="./images/team/img@1x-2.jpg 1x, ./images/team/img@2x-2.jpg 2x" src="./images/team/img@1x-2.jpg" alt="the man smiles" width="264" height="260" loading="lazy">
                   <div class="team-list-wraper-text">
                      <h3 class="team-list-titel heading">Tom Ford</h3>
                      <p class="team-list-text text">Frontend Developer</p>
@@ -213,7 +223,7 @@
                </li>
 
                <li class="team-list-item">
-                  <img class="team-list-img" src="./images/team/img-2.jpg" alt="young girl with long dark hair" width="264" height="260">
+                  <img class="team-list-img" srcset="./images/team/img@1x-1.jpg 1x, ./images/team/img@2x-1.jpg 2x" src="./images/team/img@1x-1.jpg" alt="the man smiles" width="264" height="260" loading="lazy">
                   <div class="team-list-wraper-text">
                      <h3 class="team-list-titel heading">Camila Garcia</h3>
                      <p class="team-list-text text">Marketing</p>
@@ -251,7 +261,7 @@
                </li>
 
                <li class="team-list-item">
-                  <img class="team-list-img" src="./images/team/img-3.jpg" alt="young man smiling" width="264" height="260">
+                  <img class="team-list-img" srcset="./images/team/img@1x.jpg 1x, ./images/team/img@2x.jpg 2x" src="./images/team/img@1x.jpg" alt="the man smiles" width="264" height="260" loading="lazy">
                   <div class="team-list-wraper-text">
                      <h3 class="team-list-titel heading">Daniel Wilson</h3>
                      <p class="team-list-text text">UI Designer</p>
@@ -353,7 +363,7 @@
    </main>
    <!-- =============footer================= -->
 
-   <footer class="footer-section ">
+   <footer class="footer-section">
       <div class="footer-container container">
          <div class="footer-wrap-info">
             <a class="footer-logo link logo" href="./index.html">Web<span class="footer-logo-wrap">Studio</span></a>
@@ -417,7 +427,7 @@
    <!-- Modal window -->
    <div data-modal class="backdrop is-hidden">
       <div class="modal-blok">
-         <button type="button" data-modal-close class="modal-btn">
+         <button class="modal-btn" type="button" data-modal-close>
             <svg class="modal-btn-icon" width="8" height="8">
                <use href="./images/icons.svg#icon-close"></use>
             </svg>
@@ -482,7 +492,80 @@
       </div>
    </div>
 
+   <!-- Modal menu -->
+   <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="modal-btn js-close-menu ">
+         <svg class="modal-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+         </svg>
+      </button>
+
+      <ul class="mobile-menu list">
+         <li class="mobile-menu-item">
+            <a href="index.html" class="mobile-menu-link link">Studio</a>
+         </li>
+         <li class="mobile-menu-item">
+            <a href="portfolio.html" class="mobile-menu-link link">Portfolio</a>
+         </li>
+         <li class="mobile-menu-item">
+            <a href="" class="mobile-menu-link link">Contacts</a>
+         </li>
+      </ul>
+
+      <address class="address-block">
+         <ul class="address-list list">
+
+            <li class="address-list-item">
+               <a class="address-list-link address-list-link-phone link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+
+            <li class="address-list-item">
+               <a class="address-list-link  link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+
+
+         </ul>
+      </address>
+
+      <ul class="footer-list modal-list list">
+         <li class="modal-list-item">
+            <a class="footer-list-linck" href="">
+               <svg class="footer-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+               </svg>
+            </a>
+         </li>
+
+         <li class="footer-list-item">
+            <a class="footer-list-linck" href="">
+               <svg class="footer-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+               </svg>
+            </a>
+         </li>
+
+         <li class="footer-list-item">
+            <a class="footer-list-linck" href="">
+               <svg class="footer-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+               </svg>
+            </a>
+         </li>
+
+         <li class="footer-list-item">
+            <a class="footer-list-linck" href="">
+               <svg class="footer-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+               </svg>
+            </a>
+         </li>
+      </ul>
+   </div>
+
+
    <script src="./js/modal.js"></script>
+   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js" integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA==" crossorigin="anonymous"></script>
+   <script defer src="js/mobile-menu.js"></script>
 </body>
 
 </html>
