--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
    <header class="header-section">
       <div class="container container-header">
          <nav class="header-nav">
-            <a class="header-logo logo link" href="./index.html">Web<span class="header-logo-wrap">Studio</span></a>
+            <a class="header-logo logo link " href="./index.html">Web<span class="header-logo-wrap">Studio</span></a>
 
             <ul class="header-list list">
                <li class="header-list-item">
@@ -35,7 +35,7 @@
             </ul>
          </nav>
 
-         <address class="address-block">
+         <address class="address-block address-none">
             <ul class="address-list list">
                <li class="address-list-item">
                   <a class="address-list-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -46,8 +46,13 @@
                </li>
             </ul>
          </address>
-      </div>
 
+         <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+            <svg class="menu-toggle-icon" width="32" height="22">
+               <use href="./images/icons.svg#icon-menu"></use>
+            </svg>
+         </button>
+      </div>
    </header>
    <!-- =============main portfolio================= -->
    <main class="main-section-portfolio">
@@ -84,7 +89,7 @@
                <li class="gallery-list-item">
                   <a class="gallery-list-link link" href="#">
                      <div class="gallery-list-wrap">
-                        <img class="gallery-list-img" src="./images/portfolio/img-8.jpg" alt="Banking App Interface Concept" width="360" height="300">
+                        <img class="gallery-list-img" srcset="./images/portfolio/img-8.jpg 1x, ./images/portfolio/img@2x-8.jpg 2x" src="./images/portfolio/img-8.jpg" alt="Banking App Interface Concept" width="360" height="300" loading="lazy">
                         <p class="gallery-overlay-text">
                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -100,7 +105,7 @@
                <li class="gallery-list-item">
                   <a class="gallery-list-link link" href="#">
                      <div class="gallery-list-wrap">
-                        <img class="gallery-list-img" src="./images/portfolio/img-7.jpg" alt="Cashless Payment" width="360" height="300">
+                        <img class="gallery-list-img" srcset="./images/portfolio/img-7.jpg 1x, ./images/portfolio/img@2x-7.jpg 2x" src="./images/portfolio/img-7.jpg" alt="Cashless Payment" width="360" height="300" loading="lazy">
                         <p class="gallery-overlay-text">
                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -115,7 +120,7 @@
                <li class="gallery-list-item">
                   <a class="gallery-list-link link" href="#">
                      <div class="gallery-list-wrap">
-                        <img class="gallery-list-img" src="./images/portfolio/img-6.jpg" alt="Meditation App" width="360" height="300">
+                        <img class="gallery-list-img" srcset="./images/portfolio/img-6.jpg 1x, ./images/portfolio/img@2x-6.jpg 2x" src="./images/portfolio/img-6.jpg" alt="Meditation App" width="360" height="300" loading="lazy">
                         <p class="gallery-overlay-text">
                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -131,7 +136,7 @@
                <li class="gallery-list-item">
                   <a class="gallery-list-link link" href="#">
                      <div class="gallery-list-wrap">
-                        <img class="gallery-list-img" src="./images/portfolio/img-5.jpg" alt="Taxi Service" width="360" height="300">
+                        <img class="gallery-list-img" srcset="./images/portfolio/img-5.jpg 1x, ./images/portfolio/img@2x-5.jpg 2x" src="./images/portfolio/img-5.jpg" alt="Taxi Service" width="360" height="300" loading="lazy">
                         <p class="gallery-overlay-text">
                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -146,7 +151,7 @@
                <li class="gallery-list-item">
                   <a class="gallery-list-link link" href="#">
                      <div class="gallery-list-wrap">
-                        <img class="gallery-list-img" src="./images/portfolio/img-4.jpg" alt="Screen Illustrations" width="360" height="300">
+                        <img class="gallery-list-img" srcset="./images/portfolio/img-4.jpg 1x, ./images/portfolio/img@2x-4.jpg 2x" src="./images/portfolio/img-4.jpg" alt="Screen Illustrations" width="360" height="300" loading="lazy">
                         <p class="gallery-overlay-text">
                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -161,7 +166,7 @@
                <li class="gallery-list-item">
                   <a class="gallery-list-link link" href="#">
                      <div class="gallery-list-wrap">
-                        <img class="gallery-list-img" src="./images/portfolio/img-3.jpg" alt="Online Courses" width="360" height="300">
+                        <img class="gallery-list-img" srcset="./images/portfolio/img-3.jpg 1x, ./images/portfolio/img@2x-3.jpg 2x" src="./images/portfolio/img-3.jpg" alt="Online Courses" width="360" height="300" loading="lazy">
                         <p class="gallery-overlay-text">
                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -176,7 +181,7 @@
                <li class="gallery-list-item">
                   <a class="gallery-list-link link" href="#">
                      <div class="gallery-list-wrap">
-                        <img class="gallery-list-img" src="./images/portfolio/img-2.jpg" alt="Instagram Stories Concept" width="360" height="300">
+                        <img class="gallery-list-img" srcset="./images/portfolio/img-2.jpg 1x, ./images/portfolio/img@2x-2.jpg 2x" src="./images/portfolio/img-2.jpg" alt="Instagram Stories Concept" width="360" height="300" loading="lazy">
                         <p class="gallery-overlay-text">
                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -191,7 +196,7 @@
                <li class="gallery-list-item">
                   <a class="gallery-list-link link" href="#">
                      <div class="gallery-list-wrap">
-                        <img class="gallery-list-img" src="./images/portfolio/img-1.jpg" alt="Organic Food" width="360" height="300">
+                        <img class="gallery-list-img" srcset="./images/portfolio/img-1.jpg 1x, ./images/portfolio/img@2x-1.jpg 2x" src="./images/portfolio/img-1.jpg" alt="Organic Food" width="360" height="300" loading="lazy">
                         <p class="gallery-overlay-text">
                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -206,7 +211,7 @@
                <li class="gallery-list-item">
                   <a class="gallery-list-link link" href="#">
                      <div class="gallery-list-wrap">
-                        <img class="gallery-list-img" src="./images/portfolio/img.jpg" alt="Fresh Coffee" width="360" height="300">
+                        <img class="gallery-list-img" srcset="./images/portfolio/img.jpg 1x, ./images/portfolio/img@2x.jpg 2x" src="./images/portfolio/img.jpg" alt="Fresh Coffee" width="360" height="300" loading="lazy">
                         <p class="gallery-overlay-text">
                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -225,7 +230,7 @@
    </main>
 
    <!-- =============footer portfolio================= -->
-   <footer class="footer-section ">
+   <footer class="footer-section">
       <div class="footer-container container">
          <div class="footer-wrap-info">
             <a class="footer-logo link logo" href="./index.html">Web<span class="footer-logo-wrap">Studio</span></a>
@@ -286,9 +291,78 @@
       </div>
    </footer>
 
+   <!-- Modal menu -->
+   <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="modal-btn js-close-menu ">
+         <svg class="modal-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+         </svg>
+      </button>
+
+      <ul class="mobile-menu list">
+         <li class="mobile-menu-item">
+            <a href="./index.html" class="mobile-menu-link link">Studio</a>
+         </li>
+         <li class="mobile-menu-item">
+            <a href="./portfolio.html" class="mobile-menu-link link">Portfolio</a>
+         </li>
+         <li class="mobile-menu-item">
+            <a href="" class="mobile-menu-link link">Contacts</a>
+         </li>
+      </ul>
+
+      <address class="address-block">
+         <ul class="address-list list">
+
+            <li class="address-list-item">
+               <a class="address-list-link address-list-link-phone link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+
+            <li class="address-list-item">
+               <a class="address-list-link  link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
 
 
-   <script src="./js/modal.js"></script>
+         </ul>
+      </address>
+
+      <ul class="footer-list modal-list list">
+         <li class="modal-list-item">
+            <a class="footer-list-linck" href="">
+               <svg class="footer-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+               </svg>
+            </a>
+         </li>
+
+         <li class="footer-list-item">
+            <a class="footer-list-linck" href="">
+               <svg class="footer-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+               </svg>
+            </a>
+         </li>
+
+         <li class="footer-list-item">
+            <a class="footer-list-linck" href="">
+               <svg class="footer-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+               </svg>
+            </a>
+         </li>
+
+         <li class="footer-list-item">
+            <a class="footer-list-linck" href="">
+               <svg class="footer-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+               </svg>
+            </a>
+         </li>
+      </ul>
+   </div>
+
+   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js" integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA==" crossorigin="anonymous"></script>
+   <script defer src="js/mobile-menu.js"></script>
 </body>
 
 </html>
